# shogi_legality_lite

./: Cargo.toml  Makefile  README.md  bench.sh  cbindgen.toml  generate_header.sh
.github/workflows/: c-bindings.yml  rust.yml
dev/bench/: data.js
include/: shogi_legality_lite.h
shogi_legality_lite/: Cargo.toml  README.md
shogi_legality_lite/benches/: mate_solver.rs  perft.rs
shogi_legality_lite/examples/: mate_solver.rs  perft.rs
shogi_legality_lite/src/: lib.rs  mate_solver.rs  normal.rs  perft.rs  prelegality.rs
shogi_legality_lite_c/: Cargo.toml  README.md
shogi_legality_lite_c/src/: no_std.rs
