[workspace]
members = [
    "shogi_legality_lite",
    "shogi_legality_lite_c",
]

[profile.dev]
panic = "abort"
debug = false

[profile.release]
opt-level = "z"
panic = "abort"
strip = "debuginfo" # "symbol" removes exported symbols, which renders the generated cdylib useless.
lto = true

[profile.release-speed]
inherits = "release"
opt-level = 3

[patch.crates-io]
shogi_core = { git = "https://github.com/rust-shogi-crates/shogi_core", branch = "main" }
