[package]
name = "shogi_legality_lite"
version = "0.1.0"
authors = ["Rust shogi crates developers"]
edition = "2021"
rust-version = "1.60"
description = "Fundamental types and functions for shogi"
documentation = "https://docs.rs/shogi_core"
readme = "README.md"
repository = "https://github.com/rust-shogi-crates/shogi_core/tree/main/shogi_core"
license = "MIT"
keywords = ["shogi", "engine"]
categories = ["games", "game-engines", "game-development", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
alloc = ["shogi_core/alloc"]
std = ["alloc", "shogi_core/std"]

[lib]
crate-type = [
    "rlib",
]

[dependencies]
shogi_core = { version = "0.1.3", default-features = false }
