[package]
name = "shogi_legality_lite"
version = "0.1.3"
authors = ["Rust shogi crates developers"]
edition = "2021"
rust-version = "1.74"
description = "Legality checking in shogi without tables"
documentation = "https://docs.rs/shogi_legality_lite"
readme = "README.md"
repository = "https://github.com/rust-shogi-crates/shogi_legality_lite/tree/main/shogi_legality_lite"
license = "MIT"
keywords = ["shogi", "engine"]
categories = ["games", "game-engines", "game-development", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
alloc = ["shogi_core/alloc"]
std = ["alloc", "shogi_core/std"]

[lib]
crate-type = [
    "rlib",
]
bench = false

[dependencies]
shogi_core = { version = "0.1.3", default-features = false }

[dev-dependencies]
shogi_usi_parser = { version = "=0.1.0", default-features = false }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "mate_solver"
harness = false
