[package]
name = "shogi_legality_lite_c"
version = "0.1.0"
edition = "2021"
categories = ["no-std"]

[features]
default = ["std"]
alloc = ["shogi_legality_lite/alloc"]
std = ["shogi_legality_lite/std"]

[lib]
crate-type = [
    "cdylib",
]

[dependencies]
shogi_legality_lite = { path = "../shogi_legality_lite", default-features = false }
