[package]
name = "shogi_legality_lite_c"
version = "0.0.0-unpublished"
authors = ["Rust shogi crates developers"]
edition = "2021"
rust-version = "1.74"
description = "C bindings of shogi_legality_lite"
repository = "https://github.com/rust-shogi-crates/shogi_legality_lite/tree/main/shogi_legality_lite_c"
license = "MIT"
keywords = ["shogi", "engine"]
categories = ["games", "game-engines", "game-development", "no-std"]
publish = false

[features]
default = ["std"]
alloc = ["shogi_legality_lite/alloc"]
std = ["shogi_legality_lite/std"]

[lib]
crate-type = [
    "cdylib",
]

[dependencies]
shogi_legality_lite = { path = "../shogi_legality_lite", default-features = false }
